fix(show): content column should not collapse
- show backgrounds should now alternate warm and cold colors, with every other odd alternating yellow and orange.

--- a/_sass/_show.scss
+++ b/_sass/_show.scss
@@ -3,13 +3,12 @@
   --_show--column-gap: var(--show--column-gap, var(--content---column-gap, 3rem));
   --_show--row-gap: var(--show--row-gap, var(--content---row-gap, 2rem));
   --_show--padding-y: var(--show--padding-y, var(--content--padding-y, 3rem));
-  --_show--color: var(--show--color, #{$yellow});
+  --_show--color: var(--show--color, #{$orange});
   --_show--bg--color--start: var(--show--bg--color--start, #{$white});
   --_show--bg--color--end: var(--show--bg--color--end, color-mix(in oklab, var(--_show--color) 10%, var(--_show--bg--color--start)));
 
   display: grid;
-  grid-template-columns: [full-width-start] 1fr [extra-wide-start] calc(var(--_show--gutter) / 2) [wide-start] calc(var(--_show--gutter) / 2) [content-start] fit-content(900px) [content-end] calc(var(--_show--gutter) / 2) [wide-end] calc(var(--_show--gutter) / 2) [extra-wide-end] 1fr [full-width-end];
-  justify-content: center;
+  grid-template-columns: [full-width-start] 1fr [extra-wide-start] calc(var(--_show--gutter) / 2) [wide-start] calc(var(--_show--gutter) / 2) [content-start] minmax(min-content, 900px) [content-end] calc(var(--_show--gutter) / 2) [wide-end] calc(var(--_show--gutter) / 2) [extra-wide-end] 1fr [full-width-end];
   row-gap: var(--_show--row-gap);
   max-width: 100vw;
 
@@ -18,16 +17,16 @@
   background: var(--_show--bg--color--start);
   background: linear-gradient(to bottom, var(--_show--bg--color--start) 0%, var(--_show--bg--color--end) 30%);
 
-  & ~ & {
-    --show--color: #{$cyan};
-    --show-logo--accent--color1: #{$yellow};
+  &:nth-of-type(odd):nth-of-type(4n + 1) {
+    --show--color: #{$yellow};
+    --show-logo--accent--color1: #{$cyan};
     --show-logo--accent--color2: #{$orange};
   }
 
-  & ~ & ~ & {
-    --show--color: #{$orange};
+  &:nth-of-type(even) {
+    --show--color: #{$cyan};
     --show-logo--accent--color1: #{$yellow};
-    --show-logo--accent--color2: #{$cyan};
+    --show-logo--accent--color2: #{$orange};
   }
 
   @media (min-width: 768px) {
@@ -119,8 +118,8 @@
 }
 
 .show-logo {
-  --_show-logo--accent--color1: var(--show-logo--accent--color1, #{$cyan});
-  --_show-logo--accent--color2: var(--show-logo--accent--color2, #{$orange});
+  --_show-logo--accent--color1: var(--show-logo--accent--color1, #{$yellow});
+  --_show-logo--accent--color2: var(--show-logo--accent--color2, #{$cyan});
   
   grid-area: logo;
 
